system logs fetching for admin
